{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 29,
  "lineage": "baba9021-cf87-71ac-6aad-6475f9198536",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mod_nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-032b5770f279fb2ac",
            "public_dns": "ec2-13-56-36-113.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.36.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-055e1eb5a07549cfd",
            "public_dns": "ec2-54-177-54-138.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.54.138",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06264706f72900cbd",
            "owner_id": "818215835445",
            "tags": {
              "Name": "eks_vpc",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032b5770f279fb2ac",
            "id": "nat-0cf3fbacc2fc4eb0e",
            "network_interface_id": "eni-0afeedb91c66f8f5d",
            "private_ip": "10.15.34.204",
            "public_ip": "13.56.36.113",
            "subnet_id": "subnet-0cdeaadfd2d2ad681",
            "tags": {
              "kubernetes.io/cluster/dev-k8": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055e1eb5a07549cfd",
            "id": "nat-02b469097647cd92f",
            "network_interface_id": "eni-06b040edda65f0223",
            "private_ip": "10.15.44.205",
            "public_ip": "54.177.54.138",
            "subnet_id": "subnet-0eda4cde79f41a0ed",
            "tags": {
              "kubernetes.io/cluster/dev-k8": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ed07c4efc774558b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0cf3fbacc2fc4eb0e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed07c4efc774558b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-056b90bc395b84c591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-02b469097647cd92f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056b90bc395b84c59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06264706f72900cbd",
            "id": "r-rtb-07819c4461f1a80fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07819c4461f1a80fa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ed07c4efc774558b",
            "owner_id": "818215835445",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_az1",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-056b90bc395b84c59",
            "owner_id": "818215835445",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_az2",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07819c4461f1a80fa",
            "owner_id": "818215835445",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_admin",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7b5844628a87547",
            "route_table_id": "rtb-0ed07c4efc774558b",
            "subnet_id": "subnet-0f73d766353a88e8a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04da65961b6153804",
            "route_table_id": "rtb-056b90bc395b84c59",
            "subnet_id": "subnet-05b358bb52dd0ecd3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_prod",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055ae3edd4d185336",
            "route_table_id": "rtb-0ed07c4efc774558b",
            "subnet_id": "subnet-0899680403a768740"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081b5bb626ecfd87a",
            "route_table_id": "rtb-056b90bc395b84c59",
            "subnet_id": "subnet-036cda14b3b3ad587"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_working",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6627ed610bc27c9",
            "route_table_id": "rtb-0ed07c4efc774558b",
            "subnet_id": "subnet-095f23c8043e517d5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0157a7b9663ec70fa",
            "route_table_id": "rtb-056b90bc395b84c59",
            "subnet_id": "subnet-0c6c3abfcc00c2c39"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a366dc88e276453d",
            "route_table_id": "rtb-07819c4461f1a80fa",
            "subnet_id": "subnet-0cdeaadfd2d2ad681"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6e9294e367e2f69",
            "route_table_id": "rtb-07819c4461f1a80fa",
            "subnet_id": "subnet-0eda4cde79f41a0ed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "admin",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:818215835445:subnet/subnet-0f73d766353a88e8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.15.0.0/21",
            "id": "subnet-0f73d766353a88e8a",
            "map_public_ip_on_launch": false,
            "owner_id": "818215835445",
            "tags": {
              "Name": "admin_az1",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:818215835445:subnet/subnet-05b358bb52dd0ecd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.15.8.0/21",
            "id": "subnet-05b358bb52dd0ecd3",
            "map_public_ip_on_launch": false,
            "owner_id": "818215835445",
            "tags": {
              "Name": "admin_az2",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_prod",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:818215835445:subnet/subnet-0899680403a768740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.15.64.0/21",
            "id": "subnet-0899680403a768740",
            "map_public_ip_on_launch": false,
            "owner_id": "818215835445",
            "tags": {
              "Name": "private_prod_az1",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:818215835445:subnet/subnet-036cda14b3b3ad587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.15.72.0/21",
            "id": "subnet-036cda14b3b3ad587",
            "map_public_ip_on_launch": false,
            "owner_id": "818215835445",
            "tags": {
              "Name": "private_prod_az2",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_working",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:818215835445:subnet/subnet-095f23c8043e517d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.15.96.0/21",
            "id": "subnet-095f23c8043e517d5",
            "map_public_ip_on_launch": false,
            "owner_id": "818215835445",
            "tags": {
              "Name": "private_working_az1",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:818215835445:subnet/subnet-0c6c3abfcc00c2c39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.15.104.0/21",
            "id": "subnet-0c6c3abfcc00c2c39",
            "map_public_ip_on_launch": false,
            "owner_id": "818215835445",
            "tags": {
              "Name": "private_working_az2",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:818215835445:subnet/subnet-0cdeaadfd2d2ad681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.15.32.0/21",
            "id": "subnet-0cdeaadfd2d2ad681",
            "map_public_ip_on_launch": false,
            "owner_id": "818215835445",
            "tags": {
              "Name": "public_az1",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:818215835445:subnet/subnet-0eda4cde79f41a0ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.15.40.0/21",
            "id": "subnet-0eda4cde79f41a0ed",
            "map_public_ip_on_launch": false,
            "owner_id": "818215835445",
            "tags": {
              "Name": "public_az2",
              "kubernetes.io/cluster/dev-k8": "shared"
            },
            "vpc_id": "vpc-0db71625594e0ebbc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:818215835445:vpc/vpc-0db71625594e0ebbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/16",
            "default_network_acl_id": "acl-02f20385f0d5007f1",
            "default_route_table_id": "rtb-0bd76bcd6707cfe3c",
            "default_security_group_id": "sg-0f3f14771d92ca80b",
            "dhcp_options_id": "dopt-ed00e28b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0db71625594e0ebbc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bd76bcd6707cfe3c",
            "owner_id": "818215835445",
            "tags": {
              "Name": "eks_vpc",
              "kubernetes.io/cluster/dev-k8": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}